force-app/main/default/objects/Opportunity/fields/Actual_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cancellation_Date__c</fullName>
    <description>Date when the opportunity was marked as Cancelled</description>
    <inlineHelpText>Date when the opportunity was marked as Cancelled</inlineHelpText>
    <label>Actual Cancellation Date</label>
    <type>DateTime</type>
</CustomField>