force-app/main/default/objects/Opportunity/fields/Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Date__c</fullName>
    <description>Date when the opportunity was marked as closed won or closed lost</description>
    <inlineHelpText>Date when the opportunity was marked as Closed Won or Closed Lost</inlineHelpText>
    <label>Actual Close Date</label>
    <type>DateTime</type>
</CustomField>