force-app/main/default/objects/Opportunity/fields/Actual_Close_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Won_Date__c</fullName>
    <description>Actual data when the Contract was closed won.</description>
    <inlineHelpText>Actual data when the Contract was closed won.</inlineHelpText>
    <label>Actual Close Won Date</label>
    <type>DateTime</type>
</CustomField>