force-app/main/default/objects/Opportunity/fields/Compliance_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Approved_Date__c</fullName>
    <label>Compliance Approved Date</label>
    <type>DateTime</type>
</CustomField>