force-app/main/default/objects/Opportunity/fields/Compliance_Approved_User__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Approved_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Approved User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compliance_Approveds</relationshipName>
    <type>Lookup</type>
</CustomField>