force-app/main/default/objects/Opportunity/fields/Compliance_Approved_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Approved_User_Id__c</fullName>
    <label>Compliance Approved User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>