force-app/main/default/objects/Opportunity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>Please fill in the last day of the contract, if and when it has been terminated.</description>
    <inlineHelpText>Please fill in the last day of the contract, if and when it has been terminated.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>