force-app/main/default/objects/Opportunity/fields/DD_Confirmatory_Access_Granted__c.field-meta.xml
<CustomField>
    <fullName>DD_Confirmatory_Access_Granted__c</fullName>
    <label>DD Confirmatory (Access Granted)</label>
    <type>DateTime</type>
</CustomField>