force-app/main/default/objects/Opportunity/fields/DD_Confirmatory_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>DD_Confirmatory_Follow_Up__c</fullName>
    <label>DD Confirmatory Follow Up</label>
    <type>DateTime</type>
</CustomField>