force-app/main/default/objects/Opportunity/fields/DD_Light_Access_Granted__c.field-meta.xml
<CustomField>
    <fullName>DD_Light_Access_Granted__c</fullName>
    <label>DD Light (Access Granted)</label>
    <type>DateTime</type>
</CustomField>