force-app/main/default/objects/Opportunity/fields/DD_Light_Access_Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Light_Access_Granted_Date__c</fullName>
    <label>DD Light Access Granted Date</label>
    <type>DateTime</type>
</CustomField>