force-app/main/default/objects/Opportunity/fields/DD_Light_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>DD_Light_Follow_Up__c</fullName>
    <label>DD Light Follow Up</label>
    <type>DateTime</type>
</CustomField>