force-app/main/default/objects/Opportunity/fields/Estimated_MRR__c.field-meta.xml
<CustomField>
    <fullName>Estimated_MRR__c</fullName>
    <label>Estimated MRR</label>
    <summarizedField>OpportunityLineItem.Total_Product_Cost__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>