force-app/main/default/objects/Opportunity/fields/Estimated_OTR__c.field-meta.xml
<CustomField>
    <fullName>Estimated_OTR__c</fullName>
    <label>Estimated OTR</label>
    <summarizedField>OpportunityLineItem.One_Time_Setup_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>