force-app/main/default/objects/Opportunity/fields/Expected_average_Volume__c.field-meta.xml
<CustomField>
    <fullName>Expected_average_Volume__c</fullName>
    <description>Please enter the expected number of active users or TRX when fully ramped</description>
    <inlineHelpText>Please enter the expected number of active users or TRX when fully ramped</inlineHelpText>
    <label>Expected average Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>