force-app/main/default/objects/Opportunity/fields/Extended_Deck_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Extended_Deck_Follow_Up__c</fullName>
    <label>Extended Deck Follow Up</label>
    <type>DateTime</type>
</CustomField>