force-app/main/default/objects/Opportunity/fields/Extended_Deck_Sent__c.field-meta.xml
<CustomField>
    <fullName>Extended_Deck_Sent__c</fullName>
    <label>Extended Deck Sent</label>
    <type>DateTime</type>
</CustomField>