force-app/main/default/objects/Opportunity/fields/Extended_Deck_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Extended_Deck_Sent_By__c</fullName>
    <label>Extended Deck Sen By</label>
    <length>121</length>
    <type>Text</type>
</CustomField>