force-app/main/default/objects/Opportunity/fields/Fact_Sheet_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Fact_Sheet_Follow_Up__c</fullName>
    <label>Fact Sheet Follow Up</label>
    <type>DateTime</type>
</CustomField>