force-app/main/default/objects/Opportunity/fields/Fact_Sheet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Fact_Sheet_Sent__c</fullName>
    <label>Fact Sheet Sent</label>
    <type>DateTime</type>
</CustomField>