force-app/main/default/objects/Opportunity/fields/Fact_Sheet_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Fact_Sheet_Sent_By__c</fullName>
    <label>Fact Sheet Sent By</label>
    <length>121</length>
    <type>Text</type>
</CustomField>