force-app/main/default/objects/Opportunity/fields/FastBill_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>FastBill_Customer_ID__c</fullName>
    <description>Customer ID for FastBill Invoice System</description>
    <inlineHelpText>Customer ID for FastBill Invoice System</inlineHelpText>
    <label>FastBill Customer ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>