force-app/main/default/objects/Opportunity/fields/Finance_Approved_User__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approved_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Approved User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Finance_Approves</relationshipName>
    <type>Lookup</type>
</CustomField>