force-app/main/default/objects/Opportunity/fields/Finance_Approved_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approved_User_Id__c</fullName>
    <label>Finance Approved User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>