force-app/main/default/objects/Opportunity/fields/Finleap_Company__c.field-meta.xml
<CustomField>
    <fullName>Finleap_Company__c</fullName>
    <description>Please select the respective Finleap Company.</description>
    <inlineHelpText>Please select the respective Finleap Company.</inlineHelpText>
    <label>Finleap Company</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finleap Connect</fullName>
            </value>
            <value>
                <fullName>Element</fullName>
            </value>
            <value>
                <fullName>elinvar</fullName>
            </value>
            <value>
                <fullName>solarisBank</fullName>
            </value>
            <value>
                <fullName>BillFront</fullName>
            </value>
            <value>
                <fullName>Clark</fullName>
            </value>
            <value>
                <fullName>Crosslend</fullName>
            </value>
            <value>
                <fullName>financeAds</fullName>
            </value>
            <value>
                <fullName>Joonko</fullName>
            </value>
            <value>
                <fullName>PAIR Finance</fullName>
            </value>
            <value>
                <fullName>Penta</fullName>
            </value>
            <value>
                <fullName>Perseus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Beesy</fullName>
            </value>
            <value>
                <fullName>Consumer Platform</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Deutsche Fintech Solutions</fullName>
            </value>
            <value>
                <fullName>European Fintech Fund</fullName>
            </value>
            <value>
                <fullName>Figo</fullName>
            </value>
            <value>
                <fullName>Finleap</fullName>
            </value>
            <value>
                <fullName>FinReach</fullName>
            </value>
            <value>
                <fullName>Finreach Solutions</fullName>
            </value>
            <value>
                <fullName>Infinitec Solutions</fullName>
            </value>
            <value>
                <fullName>MoneyMap</fullName>
            </value>
            <value>
                <fullName>ReloadFinance</fullName>
            </value>
            <value>
                <fullName>SBOT</fullName>
            </value>
            <value>
                <fullName>SME Banking</fullName>
            </value>
            <value>
                <fullName>Superr</fullName>
            </value>
            <value>
                <fullName>Valendo</fullName>
            </value>
            <value>
                <fullName>Zinsbaustein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>