force-app/main/default/objects/Opportunity/fields/InfinitecOppID__c.field-meta.xml
<CustomField>
    <fullName>InfinitecOppID__c</fullName>
    <description>Importing purposes.</description>
    <inlineHelpText>Importing purposes.</inlineHelpText>
    <label>InfinitecOppID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>