force-app/main/default/objects/Opportunity/fields/Initial_Costs__c.field-meta.xml
<CustomField>
    <fullName>Initial_Costs__c</fullName>
    <description>Enter initial costs here, i e. project set up, setup dedicated SaaS, etc.</description>
    <inlineHelpText>Enter initial costs here, i e. project set up, setup dedicated SaaS, etc.</inlineHelpText>
    <label>Initial Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>