force-app/main/default/objects/Opportunity/fields/Intro_Call_Meeting_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Intro_Call_Meeting_Scheduled_Date__c</fullName>
    <label>Intro Call/Meeting Scheduled Date</label>
    <type>DateTime</type>
</CustomField>