force-app/main/default/objects/Opportunity/fields/Intro_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Intro_Call_Scheduled__c</fullName>
    <label>Intro Call Scheduled</label>
    <type>DateTime</type>
</CustomField>