force-app/main/default/objects/Opportunity/fields/Intro_Meeting_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Intro_Meeting_Scheduled__c</fullName>
    <label>Intro Meeting Scheduled</label>
    <type>DateTime</type>
</CustomField>