force-app/main/default/objects/Opportunity/fields/Investor_Type__c.field-meta.xml
<CustomField>
    <fullName>Investor_Type__c</fullName>
    <label>Investor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angel</fullName>
            </value>
            <value>
                <fullName>Business Angel</fullName>
            </value>
            <value>
                <fullName>Corporate VC</fullName>
            </value>
            <value>
                <fullName>HNWI / Family Offices</fullName>
            </value>
            <value>
                <fullName>Institutional / Consulting</fullName>
            </value>
            <value>
                <fullName>Lead Investor</fullName>
            </value>
            <value>
                <fullName>Strategic - Asset Mgmt</fullName>
            </value>
            <value>
                <fullName>Strategic - Banks</fullName>
            </value>
            <value>
                <fullName>Strategic - Financial Services</fullName>
            </value>
            <value>
                <fullName>Strategic - Insurance</fullName>
            </value>
            <value>
                <fullName>Strategic - PE / VC Funds</fullName>
            </value>
            <value>
                <fullName>Strategic - Tech/IT</fullName>
            </value>
            <value>
                <fullName>SWF / Pension Funds</fullName>
            </value>
            <value>
                <fullName>Transformational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>