force-app/main/default/objects/Opportunity/fields/ISHA_Negotiation_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>ISHA_Negotiation_Signed_Date__c</fullName>
    <label>ISHA Negotiation Signed Date</label>
    <type>DateTime</type>
</CustomField>