force-app/main/default/objects/Opportunity/fields/ISHA_Negotiation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ISHA_Negotiation_Start_Date__c</fullName>
    <label>ISHA Negotiation Start Date</label>
    <type>DateTime</type>
</CustomField>