force-app/main/default/objects/Opportunity/fields/isPrivate__c.field-meta.xml
<CustomField>
    <fullName>isPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPrivate</label>
    <type>Checkbox</type>
</CustomField>