force-app/main/default/objects/Opportunity/fields/KYC_Form_Filled_Out__c.field-meta.xml
<CustomField>
    <fullName>KYC_Form_Filled_Out__c</fullName>
    <description>Has the Commercial team filled out the KYC Form completely?</description>
    <inlineHelpText>Has the Commercial team filled out the KYC Form completely?</inlineHelpText>
    <label>KYC Form Filled Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet</fullName>
                <default>true</default>
                <label>Not Yet</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>