force-app/main/default/objects/Opportunity/fields/Legacy_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Salesforce_ID__c</fullName>
    <description>Legacy Salesforce ID from Figo for Migration Purposes</description>
    <externalId>true</externalId>
    <inlineHelpText>Legacy Salesforce ID from Figo for Migration Purposes</inlineHelpText>
    <label>Legacy Salesforce ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>