force-app/main/default/objects/Opportunity/fields/Loss_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Detail__c</fullName>
    <description>Detailed Information on why this Opportunity was Closed Lost</description>
    <inlineHelpText>Detailed Information on why this Opportunity was Closed Lost</inlineHelpText>
    <label>Loss Reason Detail</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>