force-app/main/default/objects/Opportunity/fields/Max_Ticket_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Ticket_Size__c</fullName>
    <label>Max. Ticket Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>