force-app/main/default/objects/Opportunity/fields/Mgmt_Meeting_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Mgmt_Meeting_Scheduled__c</fullName>
    <label>Mgmt. Meeting Scheduled</label>
    <type>DateTime</type>
</CustomField>