force-app/main/default/objects/Opportunity/fields/Mgmt_Meeting_Scheduled_By__c.field-meta.xml
<CustomField>
    <fullName>Mgmt_Meeting_Scheduled_By__c</fullName>
    <label>Mgmt. Meeting Scheduled By</label>
    <length>121</length>
    <type>Text</type>
</CustomField>