force-app/main/default/objects/Opportunity/fields/Min_Ticket_Size__c.field-meta.xml
<CustomField>
    <fullName>Min_Ticket_Size__c</fullName>
    <label>Min. Ticket Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>