force-app/main/default/objects/Opportunity/fields/Monthly_Recurring_Usage_Fees__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Recurring_Usage_Fees__c</fullName>
    <description>Estimated monthly usage/transactions fees</description>
    <inlineHelpText>Estimated monthly usage/transactions fees</inlineHelpText>
    <label>Monthly Recurring Usage Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>