force-app/main/default/objects/Opportunity/fields/MRR_Monthly_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>MRR_Monthly_Recurring_Revenue__c</fullName>
    <description>Monthly Recurring Revenue</description>
    <inlineHelpText>Monthly Recurring Revenue</inlineHelpText>
    <label>MRR Monthly Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>