force-app/main/default/objects/Opportunity/fields/Operation_Price__c.field-meta.xml
<CustomField>
    <fullName>Operation_Price__c</fullName>
    <description>Enter the monthly price for operation here (i.e. €3.500)</description>
    <inlineHelpText>Enter the monthly price for operation here (i.e. €3.500)</inlineHelpText>
    <label>Operation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>