force-app/main/default/objects/Opportunity/fields/Other_One_Time_Fees__c.field-meta.xml
<CustomField>
    <fullName>Other_One_Time_Fees__c</fullName>
    <description>Other one time fees, like Customisation for RegShield</description>
    <inlineHelpText>Other one time fees, like Customisation for RegShield</inlineHelpText>
    <label>Other One Time Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>