force-app/main/default/objects/Opportunity/fields/Overall_Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Overall_Deal_Size__c</fullName>
    <description>Displays the overall deal size in € for contract lifetime of 2 yrs.</description>
    <formula>OTR_One_Time_Revenue__c + (MRR_Monthly_Recurring_Revenue__c * 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the overall deal size in € for contract lifetime of 2 yrs.</inlineHelpText>
    <label>Overall Deal Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>