force-app/main/default/objects/Opportunity/fields/Partner_Interaction_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Partner_Interaction_Purpose__c</fullName>
    <label>Partner Interaction Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>G2M-V</fullName>
            </value>
            <value>
                <fullName>Licence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>