force-app/main/default/objects/Opportunity/fields/Partnership_Model__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Model__c</fullName>
    <label>Partnership Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>G2M-V</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>