force-app/main/default/objects/Opportunity/fields/Pitch_Deck_Received__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Deck_Received__c</fullName>
    <label>Pitch Deck Received</label>
    <type>DateTime</type>
</CustomField>