force-app/main/default/objects/Opportunity/fields/Pitch_Deck_Received_By__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Deck_Received_By__c</fullName>
    <label>Pitch Deck Received By</label>
    <length>121</length>
    <type>Text</type>
</CustomField>