force-app/main/default/objects/Opportunity/fields/Pitch_Deck_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Deck_Received_Date__c</fullName>
    <label>Pitch Deck Received Date</label>
    <type>DateTime</type>
</CustomField>