force-app/main/default/objects/Opportunity/fields/Primary_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Name__c</fullName>
    <description>Name (String) of the Primary Campaign linked to this Opportunity</description>
    <inlineHelpText>Name (String) of the Primary Campaign linked to this Opportunity</inlineHelpText>
    <label>Primary Campaign Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>