force-app/main/default/objects/Opportunity/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Deal Priority</description>
    <inlineHelpText>Prio 1 = High Priority
Prio 2 = Medium Priority
Prio 3 = Low Priority</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prio 1</fullName>
            </value>
            <value>
                <fullName>Prio 2</fullName>
            </value>
            <value>
                <fullName>Prio 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>