force-app/main/default/objects/Opportunity/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Products selected for this Opportunity</description>
    <inlineHelpText>Products selected for this Opportunity</inlineHelpText>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product</valueSetName>
    </valueSet>
</CustomField>