force-app/main/default/objects/Opportunity/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Switch</fullName>
            </value>
            <value>
                <fullName>Connectivity</fullName>
            </value>
            <value>
                <fullName>FinX Platform</fullName>
            </value>
            <value>
                <fullName>jsHBCI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>