force-app/main/default/objects/Opportunity/fields/Product_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Product_Vertical__c</fullName>
    <description>Choose a Product Vertical for this Opportunity</description>
    <inlineHelpText>Choose a Product Vertical for this Opportunity</inlineHelpText>
    <label>Product Vertical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>White-Label Products</fullName>
            </value>
            <value>
                <fullName>Micro Products</fullName>
            </value>
            <value>
                <fullName>Consulting service</fullName>
            </value>
            <value>
                <fullName>Corporate Ventures &amp; Solutions</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>Core Services</fullName>
            </value>
            <value>
                <fullName>Salary Backed Loans</fullName>
            </value>
            <value>
                <fullName>Clark - Insurance manager</fullName>
            </value>
            <value>
                <fullName>Element - Innovative insurance products - API</fullName>
            </value>
            <value>
                <fullName>Element - Innovative insurance products - Plug&amp;Play</fullName>
            </value>
            <value>
                <fullName>Element - Standard insurance products - API</fullName>
            </value>
            <value>
                <fullName>Element - Standard insurance products - Plug&amp;Play</fullName>
            </value>
            <value>
                <fullName>Elinvar - Wealth Management</fullName>
            </value>
            <value>
                <fullName>FinanceAds - Online marketing / Acquisition</fullName>
            </value>
            <value>
                <fullName>PairFinance - Debt collection and white label dunning</fullName>
            </value>
            <value>
                <fullName>Perseus - Cybersecurity Department as a Service</fullName>
            </value>
            <value>
                <fullName>solarisBank - Blockchain Factory</fullName>
            </value>
            <value>
                <fullName>solarisBank - Cards</fullName>
            </value>
            <value>
                <fullName>solarisBank - Digital Banking</fullName>
            </value>
            <value>
                <fullName>solarisBank - KYC Platform</fullName>
            </value>
            <value>
                <fullName>solarisBank - Lending</fullName>
            </value>
            <value>
                <fullName>solarisBank - Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>