force-app/main/default/objects/Opportunity/fields/Q_A_Answered__c.field-meta.xml
<CustomField>
    <fullName>Q_A_Answered__c</fullName>
    <label>Q&amp;A Answered</label>
    <type>DateTime</type>
</CustomField>