force-app/main/default/objects/Opportunity/fields/QNA_Answered_By__c.field-meta.xml
<CustomField>
    <fullName>QNA_Answered_By__c</fullName>
    <label>Q&amp;A Answered By</label>
    <length>121</length>
    <type>Text</type>
</CustomField>