force-app/main/default/objects/Opportunity/fields/QNA_Answered_Date__c.field-meta.xml
<CustomField>
    <fullName>QNA_Answered_Date__c</fullName>
    <label>Q&amp;A Answered Date</label>
    <type>DateTime</type>
</CustomField>