force-app/main/default/objects/Opportunity/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Record Id for Administration Purposes</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>Record Id for Administration Purposes</inlineHelpText>
    <label>Record Id</label>
    <type>Text</type>
</CustomField>