force-app/main/default/objects/Opportunity/fields/Regulatory_Status__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Status__c</fullName>
    <description>Regulatory Status check type for this Opportunity</description>
    <inlineHelpText>Regulatory Status check type for this Opportunity</inlineHelpText>
    <label>Regulatory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSD2 licensed</fullName>
            </value>
            <value>
                <fullName>PSD2 non-licensed</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>To be determined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>