force-app/main/default/objects/Opportunity/fields/Revenue_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Start_Date__c</fullName>
    <description>Date when the Revenue starts to kick in / Contract starts</description>
    <inlineHelpText>Date when the Revenue starts to kick in / Contract starts</inlineHelpText>
    <label>Revenue Start Date</label>
    <type>Date</type>
</CustomField>