force-app/main/default/objects/Opportunity/fields/Short_Deck_Sent__c.field-meta.xml
<CustomField>
    <fullName>Short_Deck_Sent__c</fullName>
    <label>Short Deck Sent</label>
    <type>DateTime</type>
</CustomField>