force-app/main/default/objects/Opportunity/fields/Short_Deck_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Short_Deck_Sent_By__c</fullName>
    <label>Short Deck Sent By</label>
    <length>121</length>
    <type>Text</type>
</CustomField>