force-app/main/default/objects/Opportunity/fields/Short_Deck_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Short_Deck_Sent_Date__c</fullName>
    <label>Short Deck Sent Date</label>
    <type>DateTime</type>
</CustomField>