force-app/main/default/objects/Opportunity/fields/SLA_Price__c.field-meta.xml
<CustomField>
    <fullName>SLA_Price__c</fullName>
    <description>Enter the monthly price for the SLA package</description>
    <inlineHelpText>Enter the monthly price for the SLA package</inlineHelpText>
    <label>SLA Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>